--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 options:
   logging: "CLOUD_LOGGING_ONLY"
 steps:
-  - name: 'gcr.io/cloud-builders/bash'
+  - name: 'bash'
     args: ['-c', 'echo Hello World!']
